fix: use Grid instead of XY-Grid config in Grid "grid-column" function

--- a/scss/grid/_column.scss
+++ b/scss/grid/_column.scss
@@ -16,7 +16,7 @@
 ///
 /// @returns {Number} A calculated percentage value.
 @function grid-column($columns) {
-  @return fraction-to-percentage($columns, $denominator: $grid-columns);
+  @return fraction-to-percentage($columns, $denominator: $grid-column-count);
 }
 
 /// Creates a grid column.
