feat: add z-index to the Close Button with the "$closebutton-z-index" setting
We cannot ensure the Close Button to always be on top of others elements. This commit add a `z-index` to the Close Button and a setting to customize it.

Related to https://github.com/zurb/foundation-sites/issues/11544

--- a/scss/components/_close-button.scss
+++ b/scss/components/_close-button.scss
@@ -10,6 +10,10 @@
 /// @type List
 $closebutton-position: right top !default;
 
+/// Default z-index for a close button.
+/// @type Number
+$closebutton-z-index: 10 !default;
+
 /// Right (or left) offset(s) for a close button.
 /// @type Number|Map
 $closebutton-offset-horizontal: (
@@ -83,6 +87,7 @@ $closebutton-color-hover: $black !default;
 
   @include disable-mouse-outline;
   position: absolute;
+  z-index: $closebutton-z-index;
   color: $closebutton-color;
   cursor: pointer;
 
