refactor: use more specific `border` rules
The problem with `border` shorthand property is that any omitted
sub-values will be set to their initial value. In this case color is
omitted.

It is better to be more specific.

--- a/scss/util/_mixins.scss
+++ b/scss/util/_mixins.scss
@@ -44,7 +44,8 @@
   width: 0;
   height: 0;
 
-  border: inset $triangle-size;
+  border-style: inset;
+  border-width: $triangle-size;
 
   content: '';
 
