--- a/scss/xy-grid/_classes.scss
+++ b/scss/xy-grid/_classes.scss
@@ -107,14 +107,14 @@
   }
 }
 
-@mixin -xy-breakpoint-cell-classes($class-breakpoint, $gutter-breakpoint, $vertical) {
+@mixin -xy-breakpoint-cell-classes($class-breakpoint, $gutter-breakpoint, $vertical, $gutters) {
   $prefix: if($class-breakpoint == $-zf-zero-breakpoint, '', '#{$class-breakpoint}-');
   > .#{$prefix}auto {
-    @include xy-cell-size(auto, $vertical: $vertical);
+    @include xy-cell-size(auto, $vertical: $vertical, $gutters: $gutters);
   }
 
   > .#{$prefix}shrink {
-    @include xy-cell-size(shrink, $vertical: $vertical);
+    @include xy-cell-size(shrink, $vertical: $vertical, $gutters: $gutters);
   }
 
   @for $i from 1 through $grid-columns {
@@ -122,30 +122,31 @@
     $classname: if($vertical, '.#{$class-breakpoint}-#{$i}', '.#{$class-breakpoint}-#{$i}');
 
     > #{$classname} {
-      @include xy-cell-size($i, $vertical: $vertical);
+      @include xy-cell-size($i, $vertical: $vertical, $gutters: $gutters);
     }
   }
 }
 
 // Margin Grid classes
 @mixin xy-margin-grid-classes(
+  $gutters: $grid-margin-gutters,
   $gutter-position: left right,
   $vertical: false,
   $wrapping-selector: '.grid-margin-x'
 ){
   #{$wrapping-selector} {
-    @include xy-gutters($negative: true, $gutter-position: $gutter-position);
+    @include xy-gutters($gutters, $negative: true, $gutter-position: $gutter-position);
 
     // Base cell styles
     > .cell {
-      @include xy-cell($vertical: $vertical, $output: (size gutters));
+      @include xy-cell($gutters: $gutters, $vertical: $vertical, $output: (size gutters));
     }
 
     // base styles need to all be before the auto and shrink styles
     @include -zf-each-breakpoint() {
-      @if(type-of($grid-margin-gutters) == 'map' and map-has-key($grid-margin-gutters, $-zf-size) and $-zf-size != $-zf-zero-breakpoint) {
+      @if(type-of($gutters) == 'map' and map-has-key($gutters, $-zf-size) and $-zf-size != $-zf-zero-breakpoint) {
         > .cell {
-          @include xy-cell($vertical: $vertical, $output: (size gutters));
+          @include xy-cell($gutters: $gutters, $vertical: $vertical, $output: (size gutters));
         }
       }
     }
@@ -156,13 +157,13 @@
       // for all prior breakpoints.
       // As their gutter is defined with their width/height, even breakpoint without a new margin must be
       // generated to not having their width/height overrided by re-adjusted smaller breakpoints.
-      @if(type-of($grid-margin-gutters) == 'map' and map-has-key($grid-margin-gutters, $-zf-size)) {
+      @if(type-of($gutters) == 'map' and map-has-key($gutters, $-zf-size)) {
         @each $bp in -zf-breakpoints-less-than($-zf-size) {
-          @include -xy-breakpoint-cell-classes($bp, $-zf-size, $vertical);
+          @include -xy-breakpoint-cell-classes($bp, $-zf-size, $vertical, $gutters);
         }
       }
 
-      @include -xy-breakpoint-cell-classes($-zf-size, $-zf-size, $vertical);
+      @include -xy-breakpoint-cell-classes($-zf-size, $-zf-size, $vertical, $gutters);
     }
   }
 }
