fix: fix fouc for drilldown menus #11770
The .no-js fix for preventing FOUC in other components doesn't seem to have been applied to the drilldown component. This results in FOUC for drilldown sub-menus. This applies the .no-js fix to child menus of the drilldown component to prevent the FOUC.

--- a/scss/components/_drilldown.scss
+++ b/scss/components/_drilldown.scss
@@ -91,6 +91,10 @@ $drilldown-arrow-size: 6px !default;
       background: $drilldown-background;
     }
 
+    .no-js & ul {
+      display: none;
+    }
+
     // Applied to submenu <ul>s
     .is-drilldown-submenu {
       position: absolute;
