--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -1,3 +1,10 @@
+/**
+ * Foundation for Sites by ZURB
+ * Version 6.4.3
+ * foundation.zurb.com
+ * Licensed under MIT Open Source
+ */
+ 
 //  Foundation for Sites Settings
 //  -----------------------------
 //
