docs: remove http from links

--- a/docs/layout/default.html
+++ b/docs/layout/default.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-  <!-- <a href="http://zurb.com/wired" id="notice">
+  <!-- <a href="//zurb.com/wired" id="notice">
     <div class="info">
       <div id="clockdiv" class="countdown">
           <span class="timer-day days"></span>
@@ -34,7 +34,7 @@
     <div class="docs-off-canvas-content off-canvas-content" data-off-canvas-content>
       <div class="docs-sticky-top-bar">
         <!-- Info Banner For Announcements or Links -->
- <!--        <a href="http://zurb.com/university/foundation-intro" class="docs-banner course-banner">
+ <!--        <a href="//zurb.com/university/foundation-intro" class="docs-banner course-banner">
           <div class="info">
             <h5 class=""><strong>To master everything new in 6.4, along with the rest of Foundation register for our August 8th Webinar Class &rsaquo;</strong></h5>
           </div>
@@ -73,7 +73,7 @@
   );
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : '//www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
   </script>
