--- a/docs/partials/footer.html
+++ b/docs/partials/footer.html
@@ -5,19 +5,19 @@
   <div class="footer-nav-center">
     <ul class="footer-nav-menu">
       <li class="footer-nav-menu-item">
-        <a href="http://zurb.com/responsive">Showcase</a>
+        <a href="//zurb.com/responsive">Showcase</a>
       </li>
       <li class="footer-nav-menu-item">
-        <a href="http://zurb.com/university/courses">Training</a>
+        <a href="//zurb.com/university/courses">Training</a>
       </li>
       <li class="footer-nav-menu-item">
-        <a href="http://foundation.zurb.com/develop/getting-started.html">Building Blocks</a>
+        <a href="//foundation.zurb.com/develop/getting-started.html">Building Blocks</a>
       </li>
       <li class="footer-nav-menu-item">
-        <a href="http://foundation.zurb.com/get-involved/support.html">Get Involved</a>
+        <a href="//foundation.zurb.com/get-involved/support.html">Get Involved</a>
       </li>
       <li class="footer-nav-menu-item">
-        <a href="http://foundation.zurb.com/sites/docs/">Docs</a>
+        <a href="//foundation.zurb.com/sites/docs/">Docs</a>
       </li>
     </ul>
   </div>
