--- a/docs/partials/footer-contact.html
+++ b/docs/partials/footer-contact.html
@@ -33,7 +33,7 @@
             <p class="text-center">Or if you prefer, contact the Foundation Team at <a class="text-link" href="mailto:foundation@zurb.com">training@zurb.com</a> or (408) 341-0600 x635</p>
           </div>
         </div>
-        <input type="hidden" name="_after" value="https://foundation.zurb.com/get-involved/thanks.html">
+        <input type="hidden" name="_after" value="https://www.get.foundation/get-involved/thanks.html">
         <input type="hidden" name="_replyto" value="%email">
         <input type="hidden" name="_subject" value="ZURB | Foundation Training Inquiry">
         <input type="hidden" name="_to" value="foundation@zurb.com">
