--- a/docs/partials/navigation.html
+++ b/docs/partials/navigation.html
@@ -1,7 +1,7 @@
 <nav class="global-nav show-for-smedium">
 
   <div class="global-nav-title">
-    <a class="zurb-logo" href="//foundation.zurb.com/index.html">ZURB <strong>Foundation</strong></a>
+    <a class="zurb-logo" href="//www.get.foundation/index.html">ZURB <strong>Foundation</strong></a>
   </div>
 
   <ul class="dropdown menu right-side" data-dropdown-menu data-click-open="true">
@@ -10,64 +10,64 @@
       <a href="//zurb.com/responsive">Showcase</a>
       <ul class="menu">
         <li><a href="//zurb.com/responsive">Foundation Showcase</a></li>
-        <li><a href="//foundation.zurb.com/showcase/brands.html">Brands</a></li>
-        <li><a href="//foundation.zurb.com/showcase/case-studies.html">Case Studies</a></li>
-        <li><a href="//foundation.zurb.com/showcase/blog.html">Blog</a></li>
-        <li><a href="//foundation.zurb.com/showcase/buzz.html">Buzz</a></li>
-        <li><a href="//foundation.zurb.com/showcase/about.html">About Foundation</a></li>
+        <li><a href="//www.get.foundation/showcase/brands.html">Brands</a></li>
+        <li><a href="//www.get.foundation/showcase/case-studies.html">Case Studies</a></li>
+        <li><a href="//www.get.foundation/showcase/blog.html">Blog</a></li>
+        <li><a href="//www.get.foundation/showcase/buzz.html">Buzz</a></li>
+        <li><a href="//www.get.foundation/showcase/about.html">About Foundation</a></li>
       </ul>
     </li>
 
     <li class="menu-item">
-      <a href="//foundation.zurb.com/develop/getting-started.html">Develop</a>
+      <a href="//www.get.foundation/develop/getting-started.html">Develop</a>
       <ul class="menu">
         <li class="title">Frameworks</li>
-        <li><a href="//foundation.zurb.com/sites.html">Foundation for Sites</a></li>
-        <li><a href="//foundation.zurb.com/emails.html">Foundation for Email</a></li>
+        <li><a href="//www.get.foundation/sites.html">Foundation for Sites</a></li>
+        <li><a href="//www.get.foundation/emails.html">Foundation for Email</a></li>
         <li class="divider"></li>
         <li class="title">Develop</li>
-        <li><a href="//foundation.zurb.com/templates.html">HTML Templates</a></li>
-        <li><a href="//foundation.zurb.com/sites/resources.html">Resources</a></li>
-        <li><a href="//foundation.zurb.com/develop/building-blocks.html">Building Blocks</a></li>
+        <li><a href="//www.get.foundation/templates.html">HTML Templates</a></li>
+        <li><a href="//www.get.foundation/sites/resources.html">Resources</a></li>
+        <li><a href="//www.get.foundation/develop/building-blocks.html">Building Blocks</a></li>
       </ul>
     </li>
 
     <li class="menu-item">
-      <a href="//foundation.zurb.com/learn/tutorials.html">Tutorials</a>
+      <a href="//www.get.foundation/learn/tutorials.html">Tutorials</a>
       <ul class="menu vertical">
-        <li><a href="//foundation.zurb.com/learn/tutorials.html">Tutorials</a></li>
+        <li><a href="//www.get.foundation/learn/tutorials.html">Tutorials</a></li>
         <li><a href="//zurb.com/university/lessons">Lessons</a></li>
         <li><a href="//zurb.com/university/courses">Courses</a></li>
         <li><a href="//zurb.com/university/training">Custom Training</a></li>
-        <li><a href="//foundation.zurb.com/learn/certification.html">Certification</a></li>
-        <li><a href="//foundation.zurb.com/learn/responsive-reading.html">Responsive Reading</a></li>
+        <li><a href="//www.get.foundation/learn/certification.html">Certification</a></li>
+        <li><a href="//www.get.foundation/learn/responsive-reading.html">Responsive Reading</a></li>
       </ul>
     </li>
 
     <li class="menu-item">
-      <a href="//foundation.zurb.com/get-involved/support.html">Get Involved</a>
+      <a href="//www.get.foundation/get-involved/support.html">Get Involved</a>
       <ul class="menu vertical">
-        <li><a href="//foundation.zurb.com/get-involved/support.html">Connect</a></li>
-        <li><a href="//foundation.zurb.com/get-involved/premium-support.html">PLZ Halp</a></li>
-        <li><a href="//foundation.zurb.com/forum/">Foundation Forum</a></li>
-        <li><a href="//foundation.zurb.com/learn/events.html">Events</a></li>
-        <li><a href="//foundation.zurb.com/get-involved/faq.html">FAQs</a></li>
-        <li><a href="//foundation.zurb.com/get-involved/contribute.html">Contribute</a></li>
-        <li><a href="//foundation.zurb.com/get-involved/yetinauts.html">Yetinauts</a></li>
-        <li><a href="//foundation.zurb.com/get-involved/partners.html">Partners</a></li>
-        <li><a href="//foundation.zurb.com/email-sponsorships.html">Sponsorships</a></li>
+        <li><a href="//www.get.foundation/get-involved/support.html">Connect</a></li>
+        <li><a href="//www.get.foundation/get-involved/premium-support.html">PLZ Halp</a></li>
+        <li><a href="//www.get.foundation/forum/">Foundation Forum</a></li>
+        <li><a href="//www.get.foundation/learn/events.html">Events</a></li>
+        <li><a href="//www.get.foundation/get-involved/faq.html">FAQs</a></li>
+        <li><a href="//www.get.foundation/get-involved/contribute.html">Contribute</a></li>
+        <li><a href="//www.get.foundation/get-involved/yetinauts.html">Yetinauts</a></li>
+        <li><a href="//www.get.foundation/get-involved/partners.html">Partners</a></li>
+        <li><a href="//www.get.foundation/email-sponsorships.html">Sponsorships</a></li>
       </ul>
     </li>
 
     <li class="menu-item">
-      <a href="//foundation.zurb.com/frameworks-docs.html">Docs</a>
+      <a href="//www.get.foundation/frameworks-docs.html">Docs</a>
       <ul class="menu vertical">
-        <li><a target="_blank" href="//foundation.zurb.com/sites/docs/">Sites Docs</a></li>
-        <li><a target="_blank" href="//foundation.zurb.com/emails/docs">Emails Docs</a></li>
+        <li><a target="_blank" href="//www.get.foundation/sites/docs/">Sites Docs</a></li>
+        <li><a target="_blank" href="//www.get.foundation/emails/docs">Emails Docs</a></li>
       </ul>
     </li>
 
-    <li class="menu-button"><a href="//foundation.zurb.com/develop/getting-started.html" class="button">Getting Started</a></li>
+    <li class="menu-button"><a href="//www.get.foundation/develop/getting-started.html" class="button">Getting Started</a></li>
 
   </ul>
 </nav>
