--- a/docs/partials/footer-contact.html
+++ b/docs/partials/footer-contact.html
@@ -30,16 +30,16 @@
           </div>
           <div class="small-12 column form-contact-form-button">
             <button type="submit" id="SubmitButton" class="expanded large button home-form-submit-button">Contact Us</button>
-            <p class="text-center">Or if you prefer, contact the Foundation Team at <a class="text-link" href="mailto:foundation@zurb.com">training@zurb.com</a> or (408) 341-0600 x635</p>
+            <p class="text-center">Or if you prefer, contact the Foundation Team at <a class="text-link" href="mailto:contact@get.foundation">contact@get.foundation</a></p>
           </div>
         </div>
         <input type="hidden" name="_after" value="https://www.get.foundation/get-involved/thanks.html">
         <input type="hidden" name="_replyto" value="%email">
         <input type="hidden" name="_subject" value="ZURB | Foundation Training Inquiry">
-        <input type="hidden" name="_to" value="foundation@zurb.com">
+        <input type="hidden" name="_to" value="contact@get.foundation">
       </form> -->
       <a href="https://zurb.com/university/courses" class="expanded large button home-form-submit-button">See Upcoming Classes</a>
-      <p class="text-center">Or if you prefer, contact the Foundation Team at <a class="text-link" href="mailto:foundation@zurb.com">training@zurb.com</a> or (408) 341-0600 x635</p>
+      <p class="text-center">Or if you prefer, contact the Foundation Team at <a class="text-link" href="mailto:contact@get.foundation">contact@get.foundation</a></p>
     </div>
   </div>
 </section>
