docs: forum link

--- a/docs/partials/navigation.html
+++ b/docs/partials/navigation.html
@@ -49,7 +49,7 @@
       <ul class="menu vertical">
         <li><a href="//www.get.foundation/get-involved/support.html">Connect</a></li>
         <li><a href="//www.get.foundation/get-involved/premium-support.html">PLZ Halp</a></li>
-        <li><a href="//www.get.foundation/forum/">Foundation Forum</a></li>
+        <li><a href="//foundation.discourse.group">Foundation Forum</a></li>
         <li><a href="//www.get.foundation/learn/events.html">Events</a></li>
         <li><a href="//www.get.foundation/get-involved/faq.html">FAQs</a></li>
         <li><a href="//www.get.foundation/get-involved/contribute.html">Contribute</a></li>
