--- a/docs/partials/footer.html
+++ b/docs/partials/footer.html
@@ -11,13 +11,13 @@
         <a href="https://zurb.com/university/courses">Training</a>
       </li>
       <li class="footer-nav-menu-item">
-        <a href="https://www.get.foundation/develop/getting-started.html">Building Blocks</a>
+        <a href="https://get.foundation/develop/getting-started.html">Building Blocks</a>
       </li>
       <li class="footer-nav-menu-item">
-        <a href="https://www.get.foundation/get-involved/support.html">Get Involved</a>
+        <a href="https://get.foundation/get-involved/support.html">Get Involved</a>
       </li>
       <li class="footer-nav-menu-item">
-        <a href="https://www.get.foundation/sites/docs/">Docs</a>
+        <a href="https://get.foundation/sites/docs/">Docs</a>
       </li>
     </ul>
   </div>
