--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -42,11 +42,7 @@ $true-white: #fff;
   font-family: 'zurb-logo';
   font-style: normal;
   font-weight: normal;
-  src: url('/assets/fonts/zurb-webfont.eot'),
-  url('/assets/fonts/zurb-webfont.eot?#iefix') format('embedded-opentype'),
-  url('/assets/fonts/zurb-webfont.svg') format('svg'),
-  url('/assets/fonts/zurb-webfont.ttf') format('truetype'),
-  url('/assets/fonts/zurb-webfont.woff') format('woff');
+  src: url('/assets/fonts/zurb-webfont.woff') format('woff');
 }
 
 /* Banner for announcements */
