chore: update org name

--- a/docs/partials/footer.html
+++ b/docs/partials/footer.html
@@ -27,7 +27,7 @@
         <a href="{{root}}get-involved/support.html"><img class="footer-social-icon" src="{{root}}assets/img/icons/email-icon.svg" alt=""></a>
       </li>
       <li class="footer-nav-menu-item">
-        <a href="https://www.facebook.com/ZURB/"><img class="footer-social-icon" src="{{root}}assets/img/icons/facebook-icon.svg" alt=""></a>
+        <a href="https://www.facebook.com/foundation/"><img class="footer-social-icon" src="{{root}}assets/img/icons/facebook-icon.svg" alt=""></a>
       </li>
       <li class="footer-nav-menu-item">
         <a href="https://twitter.com/ZURBfoundation"><img class="footer-social-icon" src="{{root}}assets/img/icons/twitter-icon.svg" alt=""></a>
