--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -100,6 +100,8 @@ $global-color-pick-contrast-tolerance: 0;
 $print-transparent-backgrounds: true;
 $print-hrefs: true;
 
+@include add-foundation-colors;
+
 // 2. Breakpoints
 // --------------
 
