docs: fixed bad links in menu

--- a/docs/partials/navigation.html
+++ b/docs/partials/navigation.html
@@ -63,7 +63,7 @@
       <a href="https://get.foundation/frameworks-docs.html">Docs</a>
       <ul class="menu vertical">
         <li><a target="_blank" href="https://get.foundation/sites/docs/">Sites Docs</a></li>
-        <li><a target="_blank" href="https://get.foundation/emails/docs">Emails Docs</a></li>
+        <li><a target="_blank" href="https://get.foundation/emails/docs/">Emails Docs</a></li>
       </ul>
     </li>
 
