--- a/docs/partials/off-canvi.html
+++ b/docs/partials/off-canvi.html
@@ -56,8 +56,8 @@
     <li>
       <a href="https://get.foundation/frameworks-docs.html">Docs</a>
       <ul class="submenu menu vertical" data-submenu>
-        <li><a href="https://get.foundation/docs/" target="_blank">Sites Docs</a></li>
-        <li><a href="https://zurb.com/ink/docs.php" target="_blank">Email Docs</a></li>
+        <li><a target="_blank" href="https://get.foundation/sites/docs/">Sites Docs</a></li>
+        <li><a target="_blank" href="https://get.foundation/emails/docs/">Emails Docs</a></li>
       </ul>
     </li>
 
