add visible class for use in js/foundation.drilldown.js

--- a/scss/components/_visibility.scss
+++ b/scss/components/_visibility.scss
@@ -70,6 +70,10 @@
     visibility: hidden;
   }
 
+  .visible {
+    visibility: visible !important;
+  }
+
   // Responsive visibility classes
   @each $size in $breakpoint-classes {
     @if $size != $-zf-zero-breakpoint {
