chore: use only yarn for development

--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -3,7 +3,7 @@
 //
 // You can test Sass changes locally by running these commands:
 //   git clone https://github.com/foundation/foundation-docs
-//   npm link ./foundation-docs
+//   yarn link ./foundation-docs
 //
 // Feel free to submit pull requests to foundation-docs like you would Foundation itself!
 
