--- a/scss/util/_color.scss
+++ b/scss/util/_color.scss
@@ -13,7 +13,7 @@ $primary-color: null;
 $secondary-color: null;
 $warning-color: null;
 $alert-color: null;
-$success-color:null
+$success-color:null;
 ////
 
 ////
