refactor: get rid of slash divisions for dart sass compatibility
# Conflicts:
#	scss/forms/_label.scss

--- a/scss/forms/_label.scss
+++ b/scss/forms/_label.scss
@@ -37,7 +37,7 @@ $form-label-line-height: 1.8 !default;
 
   margin: 0 0 $form-spacing;
   line-height: $global-lineheight;
-  padding: ($form-spacing / 2 + rem-calc($input-border-width)) 0;
+  padding: ($form-spacing * 0.5 + rem-calc($input-border-width)) 0;
 }
 
 @mixin foundation-form-label {
