docs: remove zurb links
closes #12227

--- a/docs/partials/off-canvi.html
+++ b/docs/partials/off-canvi.html
@@ -5,9 +5,8 @@
   <ul class="mobile-ofc vertical menu">
 
     <li>
-      <a href="https://zurb.com/responsive">Showcase</a>
+      <a href="javascript:void(0)">Showcase</a>
       <ul class="submenu menu vertical" data-submenu>
-        <li><a href="https://zurb.com/responsive">Foundation Showcase</a></li>
         <li><a href="https://get.foundation/showcase/brands.html">Brands</a></li>
         <li><a href="https://get.foundation/showcase/case-studies.html">Case Studies</a></li>
         <li><a href="https://get.foundation/showcase/blog.html">Blog</a></li>
