--- a/docs/partials/footer-contact.html
+++ b/docs/partials/footer-contact.html
@@ -2,12 +2,13 @@
 
   <div class="row align-center">
     <div class="small-12 column text-center">
-      <h5 class="homepage-section-subtitle lighter hide-me">Register Today</h5>
+      <!-- <h5 class="homepage-section-subtitle lighter hide-me">Register Today</h5>
       <span class="homepage-section-subtitle-divider lighter small-centered hide-me"></span>
-      <h1 class="homepage-section-title hide-me">Get all the answers in our <br><!-- August 8th  --><a class="hyperlink" href="https://zurb.com/university/courses">Foundation Classes</a></h1>
+      <h1 class="homepage-section-title hide-me">Get all the answers in our <br><!-- August 8th  -->
+      <a class="hyperlink" href="https://zurb.com/university/courses">Foundation Classes</a></h1> -->
     </div>
     <div class="small-11 medium-10 large-9 column text-center small-centered">
-      <p class="homepage-section-desc hide-me">Learn Foundation from the creators in our interactive online webinars which will keep you up to date with the latest trends and skills needed to win your projects.</p>
+      <!-- <p class="homepage-section-desc hide-me">Learn Foundation from the creators in our interactive online webinars which will keep you up to date with the latest trends and skills needed to win your projects.</p> -->
     </div>
     <div class="small-11 medium-8 large-5 column footer-contact-form small-centered" style="position:relative;">
       <!-- <form class="request-form" action="https://zurb.com/api/mail/zurbmail" id="requestCourseInformation" method="post">
@@ -38,8 +39,8 @@
         <input type="hidden" name="_subject" value="ZURB | Foundation Training Inquiry">
         <input type="hidden" name="_to" value="contact@get.foundation">
       </form> -->
-      <a href="https://zurb.com/university/courses" class="expanded large button home-form-submit-button">See Upcoming Classes</a>
-      <p class="text-center">Or if you prefer, contact the Foundation Team at <a class="text-link" href="mailto:contact@get.foundation">contact@get.foundation</a></p>
+      <!-- <a href="https://zurb.com/university/courses" class="expanded large button home-form-submit-button">See Upcoming Classes</a> -->
+      <p class="text-center">Contact the Foundation Team at <a class="text-link" href="mailto:contact@get.foundation">contact@get.foundation</a></p>
     </div>
   </div>
 </section>
