--- a/docs/partials/navigation.html
+++ b/docs/partials/navigation.html
@@ -7,9 +7,8 @@
   <ul class="dropdown menu right-side" data-dropdown-menu data-click-open="true">
 
     <li class="menu-item">
-      <a href="https://zurb.com/responsive">Showcase</a>
+      <a href="javascript:void(0)">Showcase</a>
       <ul class="menu">
-        <li><a href="https://zurb.com/responsive">Foundation Showcase</a></li>
         <li><a href="https://get.foundation/showcase/brands.html">Brands</a></li>
         <li><a href="https://get.foundation/showcase/case-studies.html">Case Studies</a></li>
         <li><a href="https://get.foundation/showcase/blog.html">Blog</a></li>
@@ -36,9 +35,9 @@
       <a href="https://get.foundation/learn/tutorials.html">Tutorials</a>
       <ul class="menu vertical">
         <li><a href="https://get.foundation/learn/tutorials.html">Tutorials</a></li>
-        <li><a href="https://zurb.com/university/lessons">Lessons</a></li>
+        <!-- <li><a href="https://zurb.com/university/lessons">Lessons</a></li>
         <li><a href="https://zurb.com/university/courses">Courses</a></li>
-        <li><a href="https://zurb.com/university/training">Custom Training</a></li>
+        <li><a href="https://zurb.com/university/training">Custom Training</a></li> -->
         <li><a href="https://get.foundation/learn/certification.html">Certification</a></li>
 
       </ul>
