docs: link to github discussions

--- a/docs/partials/off-canvi.html
+++ b/docs/partials/off-canvi.html
@@ -44,7 +44,7 @@
       <a href="https://get.foundation/get-involved/support.html">Get Involved</a>
       <ul class="submenu menu vertical" data-submenu>
         <li><a href="https://get.foundation/get-involved/support.html">Connect</a></li>
-        <li><a href="https://foundation.discourse.group">Foundation Forum</a></li>
+        <li><a href="https://github.com/foundation/foundation-sites/discussions">Foundation Forum</a></li>
         <li><a href="https://get.foundation/learn/events.html">Events</a></li>
         <li><a href="https://get.foundation/get-involved/faq.html">FAQs</a></li>
         <li><a href="https://get.foundation/get-involved/contribute.html">Contribute</a></li>
