--- a/docs/partials/navigation.html
+++ b/docs/partials/navigation.html
@@ -48,7 +48,7 @@
       <ul class="menu vertical">
         <li><a href="https://get.foundation/get-involved/support.html">Connect</a></li>
 
-        <li><a href="https://foundation.discourse.group">Foundation Forum</a></li>
+        <li><a href="https://github.com/foundation/foundation-sites/discussions">Foundation Forum</a></li>
         <li><a href="https://get.foundation/learn/events.html">Events</a></li>
         <li><a href="https://get.foundation/get-involved/faq.html">FAQs</a></li>
         <li><a href="https://get.foundation/get-involved/contribute.html">Contribute</a></li>
